[gd_scene load_steps=27 format=3 uid="uid://bdydaoysukv5h"]

[ext_resource type="Script" uid="uid://dpgr6oj5e2mys" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://dckdbj4wryejj" path="res://assets/sprites/GUI/dialogue.png" id="2_v86rl"]
[ext_resource type="Script" uid="uid://cq3i1eonaxo4e" path="res://scripts/menuChar1.gd" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://b1cjpmuj8y31a" path="res://assets/sprites/GUI/menu/Mugshots/Mort/MortMug.png" id="4_g3eks"]
[ext_resource type="Texture2D" uid="uid://c52fxssvhvxxk" path="res://assets/sprites/GUI/menu/Mugshots/Mort/MortMug_Low.png" id="5_v86rl"]
[ext_resource type="FontFile" uid="uid://bmmf8u0ug6ocw" path="res://assets/fonts/TrajanPro-Regular.ttf" id="6_g3eks"]
[ext_resource type="Texture2D" uid="uid://rbkygj0hyi7e" path="res://assets/sprites/GUI/bloodBar.png" id="7_v86rl"]
[ext_resource type="Script" uid="uid://vw61v5kt6yi4" path="res://scripts/inventory.gd" id="8_13sgg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4ytvr"]
blend_mode = 1

[sub_resource type="Theme" id="Theme_v86rl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13sgg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6lef"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70i5f"]
texture = ExtResource("2_v86rl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj5lg"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufwb2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70i5f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsfmq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i42df"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jp70"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxgkd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 65
border_width_top = 10
border_width_right = 65
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6cdou"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6gyw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 30
border_width_top = 10
border_width_right = 30
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dmrc"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 30
border_width_top = 10
border_width_right = 30
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81l6r"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 30
border_width_top = 10
border_width_right = 30
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_i6lef"]
script/source = "extends TabContainer
## Applies UI page up and page down inputs to tab switching.

func _unhandled_input(event : InputEvent) -> void:
	if not is_visible_in_tree():
		return
	if event.is_action_pressed(\"ui_page_down\"):
		current_tab = (current_tab+1) % get_tab_count()
	elif event.is_action_pressed(\"ui_page_up\"):
		if current_tab == 0:
			current_tab = get_tab_count()-1
		else:
			current_tab = current_tab-1
"

[node name="Menu" type="Control"]
process_mode = 3
top_level = true
z_index = 5
material = SubResource("CanvasItemMaterial_4ytvr")
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 423.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_vjb58")

[node name="PanelContainer" type="PanelContainer" parent="."]
use_parent_material = true
layout_mode = 1
offset_right = 1000.0
offset_bottom = 660.0

[node name="GeneraltabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_v86rl")
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_13sgg")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_i6lef")
theme_override_styles/panel = SubResource("StyleBoxTexture_70i5f")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_mj5lg")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_ufwb2")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_70i5f")
tab_alignment = 1
current_tab = 0
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="CharacterList" type="NinePatchRect" parent="PanelContainer/GeneraltabContainer"]
process_mode = 1
z_index = 999
layout_mode = 2
metadata/_tab_index = 0

[node name="Player" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_top = 54.594
offset_right = 40.0
offset_bottom = 94.594
script = ExtResource("3_4ytvr")

[node name="Mugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_top = 319.0
offset_right = 250.0
offset_bottom = 569.0
texture = ExtResource("4_g3eks")

[node name="LowMugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_top = 319.297
offset_right = 250.0
offset_bottom = 569.297
texture = ExtResource("5_v86rl")

[node name="Name" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_top = 189.241
offset_right = 250.0
offset_bottom = 237.241
theme_override_fonts/font = ExtResource("6_g3eks")
theme_override_font_sizes/font_size = 24
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Humanity" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 286.0
offset_right = 243.0
offset_bottom = 316.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BloodBar" type="TextureProgressBar" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 240.0
offset_right = 243.0
offset_bottom = 249.0
texture_progress = ExtResource("7_v86rl")
tint_under = Color(0.670588, 0.670588, 0.670588, 0.670588)
tint_progress = Color(0.52, 0, 0, 1)

[node name="GutBar" type="TextureProgressBar" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 270.775
offset_right = 243.037
offset_bottom = 310.775
texture_progress = ExtResource("7_v86rl")

[node name="Fullness" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 253.663
offset_right = 250.037
offset_bottom = 289.663
theme_override_fonts/font = ExtResource("6_g3eks")
theme_override_font_sizes/font_size = 16
text = "Gut"
vertical_alignment = 1

[node name="HP" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 222.459
offset_right = 250.037
offset_bottom = 261.459
theme_override_fonts/font = ExtResource("6_g3eks")
theme_override_font_sizes/font_size = 16
text = "Blood"
vertical_alignment = 1

[node name="bloodVal" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 66.0
offset_top = 230.0
offset_right = 244.0
offset_bottom = 246.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="gutVal" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Player"]
layout_mode = 0
offset_left = 46.0
offset_top = 262.0
offset_right = 242.0
offset_bottom = 278.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="PMember1" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_left = 250.143
offset_top = 373.686
offset_right = 500.143
offset_bottom = 623.686
texture = ExtResource("4_g3eks")

[node name="LowMugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="PMember2" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_left = 500.285
offset_top = 373.686
offset_right = 750.285
offset_bottom = 623.686
texture = ExtResource("4_g3eks")

[node name="LowMugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="PMember3" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_left = 750.428
offset_top = 373.686
offset_right = 1000.43
offset_bottom = 623.686
texture = ExtResource("4_g3eks")

[node name="LowMugshot" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Buttons" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Location" type="Control" parent="PanelContainer/GeneraltabContainer/CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="location" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Location"]
layout_mode = 0
offset_left = 1.00459
offset_top = 150.221
offset_right = 1000.0
offset_bottom = 240.221
theme_override_font_sizes/font_size = 32
text = "LOCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="something" type="Label" parent="PanelContainer/GeneraltabContainer/CharacterList/Location"]
layout_mode = 0
offset_top = 40.5016
offset_right = 1000.0
offset_bottom = 150.502
theme_override_font_sizes/font_size = 40
text = "SOMETHING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/GeneraltabContainer/CharacterList"]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 374.0

[node name="INVENTORY" type="PanelContainer" parent="PanelContainer/GeneraltabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rsfmq")
script = ExtResource("8_13sgg")
metadata/_tab_index = 1

[node name="InventoryTabContainer" type="TabContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY"]
layout_mode = 2
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_i42df")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_7jp70")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_mxgkd")
theme_override_styles/panel = SubResource("StyleBoxFlat_6cdou")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_g6gyw")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_3dmrc")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_81l6r")
tab_alignment = 2
current_tab = 3
script = SubResource("GDScript_i6lef")

[node name="Item" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="itemMarginContainer" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Item"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="itemLabel" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Item/itemMarginContainer"]
layout_mode = 2

[node name="Food" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="foodMarginContainer" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Food"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="foodLabel" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Food/foodMarginContainer"]
layout_mode = 2
text = "dsad"

[node name="Texts" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="textsMarginContainer" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Texts"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="textsLabel" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Texts/textsMarginContainer"]
layout_mode = 2

[node name="Armor" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer"]
layout_mode = 2
metadata/_tab_index = 3

[node name="armorMarginContainer" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Armor"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="armorLabel" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Armor/armorMarginContainer"]
layout_mode = 2

[node name="Weapons" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="weaponsMarginContainer" type="MarginContainer" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Weapons"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="weaponsLabel" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Weapons/weaponsMarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/GeneraltabContainer/INVENTORY"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/GeneraltabContainer/INVENTORY/Control"]
layout_mode = 0
offset_top = 2.0
offset_right = 255.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 24
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SKILL" type="PanelContainer" parent="PanelContainer/GeneraltabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="EQUIPMENT" type="PanelContainer" parent="PanelContainer/GeneraltabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="SETTINGS" type="PanelContainer" parent="PanelContainer/GeneraltabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[connection signal="visibility_changed" from="." to="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer/Item" method="_on_menu_visibility_changed"]
[connection signal="tab_changed" from="PanelContainer/GeneraltabContainer" to="PanelContainer/GeneraltabContainer/INVENTORY/InventoryTabContainer" method="_on_generaltab_container_tab_changed"]
